--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -34,7 +34,7 @@
         </form>
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
-                <!-- ko template: getTemplate() --><!-- /ko -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
 
@@ -53,9 +53,9 @@
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
-            <div class="secondary">
+            <div class="secondary forgot-message" style="display: none;">
                 <span id="checkout-review-edit-label" data-bind="i18n: 'Forgot an Item?'"></span>
-                <a data-bind="attr: {href: $parents[1].cartUrl}"
+                <a data-bind="attr: {href: checkout/cart"
                    aria-describedby="checkout-review-edit-label"
                    class="action edit">
                     <span data-bind="i18n: 'Edit Your Cart'"></span>
