--- a/app/code/Rede/Adquirencia/view/frontend/web/template/payment/form.html
+++ b/app/code/Rede/Adquirencia/view/frontend/web/template/payment/form.html
@@ -6,11 +6,11 @@
 -->
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
-        <input type="radio"
+        <input class="radio"
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
                name="payment[method]"
-               class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
-        <label data-bind="attr: {'for': getCode()}" class="label">
+               type="radio"/>
+        <label class="label" data-bind="attr: {'for': getCode()}">
             <span data-bind="text: getTitle()"></span>
         </label>
     </div>
@@ -23,41 +23,41 @@
             <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
-        <form class="form" id="rede-form" action="#" method="post" data-bind="mageInit:
+        <form action="#" class="form" data-bind="mageInit:
             { 'rede_register_validate':
               {
                 'context': context(),
                 'code': getCode()
               }
-            }">
+            }" id="rede-form" method="post">
             <!-- ko template: 'Rede_Adquirencia/payment/cc-form' --><!-- /ko -->
         </form>
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
-                <!-- ko template: getTemplate() --><!-- /ko -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button data-role="review-save"
-                        type="submit"
+                <button class="action primary checkout"
                         data-bind="
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         click: placeOrder,
                         css: {disabled: !isPlaceOrderActionAllowed()}
                         "
-                        class="action primary checkout"
-                        disabled>
+                        data-role="review-save"
+                        disabled
+                        type="submit">
                     <span data-bind="i18n: 'Place Order'"></span>
                 </button>
             </div>
             <div class="secondary">
-                <span id="checkout-review-edit-label" data-bind="i18n: 'Forgot an Item?'"></span>
-                <a data-bind="attr: {href: $parents[1].cartUrl}"
-                   aria-describedby="checkout-review-edit-label"
-                   class="action edit">
+                <span data-bind="i18n: 'Forgot an Item?'" id="checkout-review-edit-label"></span>
+                <a aria-describedby="checkout-review-edit-label"
+                   class="action edit"
+                   data-bind="attr: {href: $parents[1].cartUrl}">
                     <span data-bind="i18n: 'Edit Your Cart'"></span>
                 </a>
             </div>
